@@ -134,6 +134,13 @@ public final class Macro extends Node {
     
     
     @Override
+    final void doAdditionalProcessableComputing(final boolean processable) {
+        // Nothing to be done here!
+    }
+
+    
+    
+    @Override
     final void doAdditionalPrecomputeNode(final Configuration configuration) {
         // Nothing to be done here!
     }
