@@ -62,7 +62,7 @@ public abstract class AbstractUnescapedTextChildModifierElementProcessor
             final List<Node> fragNodes = templateRepository.getFragment(arguments, text);
             
             for (final Node node : fragNodes) {
-                node.setSkippable(true);
+                node.setProcessable(false);
             }
 
             return fragNodes;
